  - Add TabCompleter support for addon commands, courtesy of Warriorrrr with PR #5403.
  - Fix /ta set capital, /ta set king, /ta nation NAME set commands not working properly.
  - Make Confirmation commands configurable through the API.
  - Regression: fix empty strings always being blacklisted, courtesy of Warriorrrr with PR #5406.
  - Remove one-way nation alliances.
    - This setting pre-dated the Invite system added many years ago.
    - Nations will no longer be able to ally another nation unless the other nation accepts their invite to ally.
  - Remove Config Node: war.disallow_one_way_alliance
  - Remove TownBlock, TownyWorld and TownyUniverse warzone methods.
    - No longer used by FlagWar.
  - API: DeathPriceEvents
    - NationPaysDeathPriceEvent
    - PlayerPaysDeathPriceEvent
    - TownPaysDeathPriceEvent
    - Make it possible for other plugins to manipulate the prices taken from players, towns and nations when someone dies.
  - Fix nation zones generating an error if wildernessuse isn't enabled.
0.97.2.12:
  - Add ally and enemy lists to Towns.
    - Accessible via the API only. For plugins which want to make towns war against each other.
    - Closes #3476.
  - New Command: /t allylist {townname}
    - Show allies of a town.
  - New Command: /t enemylist {townname}
    - Show enemies of a town.
  - API: Town ally/enemy events.
    - Cancellable events thrown when towns have allies or enemies added/removed.
    - TownAddAlliedTownEvent
    - TownAddEnemiedTownEvent
    - TownRemoveAlliedTownEvent
    - TownRemoveEnemiedTownEvent
  - Bump language file to 0.131.
  - Fix DeathPriceEvent missing handlers.
0.97.2.13:
  - API: Add PlayerCacheGetTownBlockStatusEvent.
    - An event which allows another plugin to dictate what TownBlockStatus will be applied to a player's cache.  
  - Fix variable name in javadoc, courtesy of Warriorrrr with PR #5419.
  - Add Government#hasActiveWar.