@@ -6922,3 +6922,4 @@ v0.92.0.11:
     - An event which allows another plugin to dictate what TownBlockStatus will be applied to a player's cache.  
   - Fix variable name in javadoc, courtesy of Warriorrrr with PR #5419.
   - Add Government#hasActiveWar.
+  - API: add TownyAPI#isPVP(Location).
